[gd_scene load_steps=2 format=3 uid="uid://dt44ewa43ei5s"]

[ext_resource type="Script" uid="uid://d05eds26ys34f" path="res://UI/HUD/Script/hud_controller.gd" id="1_hs5f0"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hs5f0")

[node name="Playing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Playing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug" type="HBoxContainer" parent="Playing/VBoxContainer"]
layout_mode = 2

[node name="ReturnToPrepButton" type="Button" parent="Playing/VBoxContainer/Debug"]
layout_mode = 2
text = "Return to prep (debug)"

[node name="HBoxContainer" type="HBoxContainer" parent="Playing/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Preparing" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Preparing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Preparing/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="PlayButton" type="Button" parent="Preparing/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "READY"

[node name="BuildButton" type="Button" parent="Preparing/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "BUILD"

[node name="Group1Button" type="Button" parent="Preparing/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Group1"

[node name="Path1Button" type="Button" parent="Preparing/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Path1"

[connection signal="pressed" from="Playing/VBoxContainer/Debug/ReturnToPrepButton" to="." method="_on_return_to_prep_button_pressed"]
[connection signal="pressed" from="Preparing/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Preparing/VBoxContainer/HBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
